--- a/blogpost.html
+++ b/blogpost.html
@@ -17,6 +17,16 @@
         inicio donde vamos a explicar
         las cosas increibles que se 
         pueden hacer con ramas</p>
+        <p>
+            los blogs son la mejor 
+            forma de compartir 
+            informacion y tus ideas.
+            Mucho mas que ir a
+            conferencias o salir en 
+            Youtube. Exceptto si eres un
+            rockstar. Pero
+            estadisticamente no lo
+            eres....por ahora.</p>
         </div>
     </div>
 </body>
