Agregue suscripcion, cambie la cabecera maestra y puse todo azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -32,7 +32,7 @@
             rockstar. Pero
             estadisticamente no lo
             eres....por ahora.</p>
-            <p>Suscribite y dale like</p>
+            <p>Suscribite y dale likee</p>
         </div>
     </div>
 </body>
